--- a/new_quiz.html
+++ b/new_quiz.html
@@ -44,9 +44,9 @@
   <div class="container-fluid rounded bg-white mt-5 mb-5">
     <div class="row justify-content-center">
       <div>
-        <h1>Fill Out the Form Below to get Started!</h1>
+        <h1 style="font-size: 400%; text-align: center; text-decoration: underline;">Fill Out the Form Below to get Started!</h1>
         <br>
-        <h1 style="color: darkgreen;">Select All That Apply</h1>
+        <h1 style="color: darkgreen; text-decoration: underline; font-size: 300%;">Select All That Apply</h1>
 
         <!----------------------- Checkbox form for quiz details ---------------------->
         <form>
@@ -116,101 +116,30 @@
 
   <script>
 
-    var currentUser;
-
-    function populateInfo() {
-      firebase.auth().onAuthStateChanged(user => {
-        // Check if user is signed in:
-        if (user) {
-
-          //go to the correct user document by referencing to the user uid
-          currentUser = db.collection("users").doc(user.uid)
-
-          //get the document for current user.
-          currentUser.get()
-            .then(userDoc => {
-              //get the data fields of the user
-              var quiz1 = userDoc.data().vegetarian;
-              var quiz2 = userDoc.data().vegan;
-              var quiz3 = userDoc.data().pescatarian;
-              var quiz4 = userDoc.data().gluten_free;
-              var quiz5 = userDoc.data().lactose_free;
-              var quiz6 = userDoc.data().keto;
-
-              //if the data fields are not empty, then write them in to the form.
-              if (quiz1 != null) {
-                document.getElementById("flexRadioDefault1").value = quiz1;
-              }
-              if (quiz2 != null) {
-                document.getElementById("flexRadioDefault2").value = quiz2;
-              }
-              if (quiz3 != null) {
-                document.getElementById("flexRadioDefault3").value = quiz3;
-              }
-              if (quiz4 != null) {
-                document.getElementById("flexRadioDefault4").value = quiz4;
-              }
-              if (quiz5 != null) {
-                document.getElementById("flexRadioDefault5").value = quiz5;
-              }
-              if (quiz6 != null) {
-                document.getElementById("flexRadioDefault6").value = quiz6;
-              }
-            })
-        } else {
-          // No user is signed in.
-          console.log("No user is signed in");
-        }
-      });
-    }
-
     //call the function to run it
     populateInfo();
 
-    function editUserInfo() {
-      //Enable the form fields
-      document.getElementById('quizFields').disabled = false;
-    }
-
-    function closeUserInfo() {
-      //Enable the form fields
-      document.getElementById('quizFields').disabled = true;
-    }
-
-    // Allows user to save form after editing
-    function saveUserInfo(name) {
-      const checkboxes = document.querySelectorAll(`input[name="${name}"]:checked`);
-      let values = [];
-      // Checks to see what checkboxes were selected
-      checkboxes.forEach((checkbox) => {
-        values.push(checkbox.value);
+          // Checkbox button JS functionality
+          const btn = document.querySelector('#btn');
+      btn.addEventListener('click', (event) => {
+        saveUserInfo('flexRadioDefault');
       });
-      // Updates selected checkboxes
+      // Assigns button selection to restriction
       currentUser.update({
-        values
-      })
-    }
-
-    // Checkbox button JS functionality
-    const btn = document.querySelector('#btn');
-    btn.addEventListener('click', (event) => {
-      saveUserInfo('flexRadioDefault');
-    });
-    // Assigns button selection to restriction
-    currentUser.update({
-        vegetarian: quiz1,
-        vegan: quiz2,
-        pescatarian: quiz3,
-        gluten_free: quiz4,
-        lactose_free: quiz5,
-        keto: quiz6,
-      })
-      // Displays completion message
-      .then(() => {
-        console.log("Document successfully updated!");
-      })
-
-    document.getElementById('personalInfoFields').disabled = true;
+          vegetarian: quiz1,
+          vegan: quiz2,
+          pescatarian: quiz3,
+          gluten_free: quiz4,
+          lactose_free: quiz5,
+          keto: quiz6,
+        })
+        // Displays completion message
+        .then(() => {
+          console.log("Document successfully updated!");
+        })
+  
+      document.getElementById('personalInfoFields').disabled = true;
+    
   </script>
 
 </body>
