separtated JS into respective own files

--- a/main.html
+++ b/main.html
@@ -27,6 +27,8 @@
 
   <!-- link to all the api keys for the project -->
   <script src="./scripts/firebaseAPI.js"></script>
+  <script src="./scripts/main.js"></script>
+
 
   <!-- Stylesheet link -->
   <link rel="stylesheet" href="styles/main_style.css">
