--- a/details.html
+++ b/details.html
@@ -24,6 +24,8 @@
 
   <!-- Link to the api keys for your firebase project -->
   <script src="./scripts/firebaseAPI.js"></script>
+  <script src="./scripts/details.js"></script>
+
 
   <!-- Stylesheet link -->
   <link rel="stylesheet" href="styles/details_style.css">
@@ -93,7 +95,7 @@
   </nav>
 
   <script>
-
+    
     showDetails();
   </script>
 </body>
