--- a/login.html
+++ b/login.html
@@ -25,6 +25,8 @@
 
   <!-- Link to the api keys for your firebase project -->
   <script src="./scripts/firebaseAPI.js"></script>
+  <script src="./scripts/login.js"></script>
+
 
   <!-- Stylesheet link -->
   <link rel="stylesheet" type="text/css" href="styles/login_style.css">
@@ -44,7 +46,49 @@
 
   <!-- JS files -->
   <script>
-    
+    // Initialize the FirebaseUI Widget using Firebase.
+    var ui = new firebaseui.auth.AuthUI(firebase.auth());
+    var uiConfig = {
+      callbacks: {
+        signInSuccessWithAuthResult: function (authResult, redirectUrl) {
+          var user = authResult.user; // get the user object from the Firebase authentication database
+          if (authResult.additionalUserInfo.isNewUser) { //if new user
+            db.collection("users").doc(user.uid)
+              .set({ //write to firestore. We are using the UID for the ID in users collection
+                name: user.displayName, //"users" collection
+                email: user.email //with authenticated user's ID (user.uid)
+              }).then(function () {
+                console.log("New user added to firestore");
+                window.location.assign("new_quiz.html");
+              })
+              .catch(function (error) {
+                console.log("Error adding new user: " + error);
+              });
+          } else {
+            return true;
+          }
+          return false;
+        },
+
+        uiShown: function () {
+          // The widget is rendered.
+          document.getElementById('loader').style.display = 'none';
+        }
+      },
+
+      // Will use popup for IDP Providers sign-in flow instead of the default, redirect.
+      signInFlow: 'popup',
+      signInSuccessUrl: 'main.html',
+      signInOptions: [
+
+        //firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+        firebase.auth.EmailAuthProvider.PROVIDER_ID,
+      ],
+      // Terms of service url.
+      tosUrl: '<your-tos-url>',
+      // Privacy policy url.
+      privacyPolicyUrl: '<your-privacy-policy-url>'
+    };
 
     // The start method will wait until the DOM is loaded.
     ui.start('#firebaseui-auth-container', uiConfig);
