--- a/new_quiz.html
+++ b/new_quiz.html
@@ -27,6 +27,7 @@
 
   <!-- Link to the api keys for your firebase project -->
   <script src="./scripts/firebaseAPI.js"></script>
+  <script src="./scripts/new_quiz.js"></script>
 
   <!-- Stylesheet link -->
   <link rel="stylesheet" href="styles/new_quiz_style.css">
@@ -119,27 +120,26 @@
     //call the function to run it
     populateInfo();
 
-          // Checkbox button JS functionality
-          const btn = document.querySelector('#btn');
-      btn.addEventListener('click', (event) => {
-        saveUserInfo('flexRadioDefault');
-      });
-      // Assigns button selection to restriction
-      currentUser.update({
-          vegetarian: quiz1,
-          vegan: quiz2,
-          pescatarian: quiz3,
-          gluten_free: quiz4,
-          lactose_free: quiz5,
-          keto: quiz6,
-        })
-        // Displays completion message
-        .then(() => {
-          console.log("Document successfully updated!");
-        })
-  
-      document.getElementById('personalInfoFields').disabled = true;
-    
+    // Checkbox button JS functionality
+    const btn = document.querySelector('#btn');
+    btn.addEventListener('click', (event) => {
+      saveUserInfo('flexRadioDefault');
+    });
+    // Assigns button selection to restriction
+    currentUser.update({
+        vegetarian: quiz1,
+        vegan: quiz2,
+        pescatarian: quiz3,
+        gluten_free: quiz4,
+        lactose_free: quiz5,
+        keto: quiz6,
+      })
+      // Displays completion message
+      .then(() => {
+        console.log("Document successfully updated!");
+      })
+
+    document.getElementById('personalInfoFields').disabled = true;
   </script>
 
 </body>
