--- a/details.html
+++ b/details.html
@@ -24,8 +24,9 @@
 
   <!-- Link to the api keys for your firebase project -->
   <script src="./scripts/firebaseAPI.js"></script>
-  <script src="./scripts/details.js"></script>
 
+  <!-- Link to javascript functions -->
+  <script src="./scripts/details.js"></script>
 
   <!-- Stylesheet link -->
   <link rel="stylesheet" href="styles/details_style.css">
@@ -93,11 +94,10 @@
       <span class="nav__text">Profile</span>
     </a>
   </nav>
-
-  <script>
-    
-    showDetails();
-  </script>
 </body>
+
+<script>
+  showDetails();
+</script>
 
 </html>
