Updated Page Titles

--- a/details.html
+++ b/details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Details BBY06</title>
+  <title>FitMeal Recipe</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
