--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Login BBY06</title>
+  <title>FitMeal Login</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
