--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Main BBY06</title>
+  <title>FitMeal</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
