--- a/new_quiz.html
+++ b/new_quiz.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>New_Quiz BBY06</title>
+  <title>FitMeal Diet Selection</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
