--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Profile BBY06</title>
+  <title>FitMeal Profile</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
