--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Menu BBY06</title>
+  <title>FitMeal Menu</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
